--- a/ProgramableSVG/ProgramableSVG.vbproj
+++ b/ProgramableSVG/ProgramableSVG.vbproj
@@ -5,4 +5,8 @@
     <TargetFramework>net9.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Templates\" />
+  </ItemGroup>
+
 </Project>
